--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ ul{
      font-size: 1.6rem;
 }
 
+.header--nav ul a:hover{
+text-decoration: underline;
+color: #8aa0ff;
+transition: 0.4s ease-in-out;
+}
+
 li a{
     color: var(--white);
 }
@@ -74,7 +80,7 @@ section{
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 10px;
-    height: calc(100vh - 200px);
+   
 }
 
 .hero--content__intro{
@@ -170,6 +176,7 @@ gap: 17px
 .lh-25px{
     line-height: 20px; 
     max-width: 600px;
+
 }
 
 .packages__ul{
@@ -467,7 +474,12 @@ input[type=checkbox]:focus{
     padding: 0 20px;
 
 }
-.about-us a{
+
+.products-links{
+    text-decoration: underline;
+}
+
+.about-us{
     text-decoration: underline;
 }
 
@@ -489,10 +501,6 @@ input[type=checkbox]:focus{
     flex-direction: column;
     align-items: center;
     gap: 5px;
-}
-
-.products--link{
-    text-decoration: underline;
 }
 
 .grid {
@@ -554,6 +562,16 @@ figure picture > img{
 }
 
 @media screen and (max-width: 768px) {
+
+      .hero--content-1{
+    background: url(./images/nebulae-pic-sm.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+    
+}
+
     .header--nav .hidden-md{
         display: none;
     }
@@ -648,6 +666,13 @@ figure picture > img{
     .header--nav .hidden-md{
         display: none;
     }
+
+   .lh-25px{
+    max-width: 1200px;
+   }
+
+
+
     .product-categories{
         flex-wrap: wrap;
         justify-content: center;
